# credit-risk-analytics

./: .gitignore  README.md  pyproject.toml
credit_risk_analytics.egg-info/: PKG-INFO  SOURCES.txt
docs/: 01_project_overview.md  02_customer_generation.md  03_credit_score_generation.md
notebooks/: 01_complete_credit_risk_pipeline.ipynb  01_customer_generator.ipynb
src/: credit_score.py  customer_generator.py  pd_model.py
