[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-analytics"
version = "0.1.0"
description = "Educational Credit Risk Analytics Suite"
authors = [
    {name = "José Reyes"}
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "streamlit",
    "plotly"
]

[tool.setuptools]
packages = ["src"]